# mkltorch

./: .gitignore  CMakeLists.txt  FFI.lua  MKLDNN.h  MKLTensor.h  README.md  generateAllTypes.h  generateFloatTypes.h  init.c  init.lua  mem_debug.lua  mkltorch-scm-1.rockspec  tensor.c  tensor.lua
cmake/: MKLTorchConfig.cmake.in
generic/: dnnWorkspace.c  dnnWorkspace.h  tensor.c  tensor.h
